Make the front end a bit nicer 💅

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,24 +10,29 @@
 
   <body>
     <div class="container">
-      <h2 class="mt-5">
-        GitGrub
-      </h2>
-      <p class="alt-h4">
-        Social Eating
-      </p>
+      <div class="logo">
+        <h2 class="mt-5">
+          GitGrub: Social Eating
+          <span></span>
+        </h2>
+      </div>
       <hr/>
       <div class="columns mt-5">
         <div class="one-third column">
           <nav class="menu">
             <%= nav_link_to "Food Truck Directory", "/", match: "trucks" %>
             <%= nav_link_to "Browse by Tag", "/tags", match: "tags" %>
-            <%= nav_link_to "Browse by Location", "/map", match: "map" %>
           </nav>
         </div>
         <div class="two-thirds column">
           <%= yield %>
         </div>
+      </div>
+      <div class="columns">
+        <hr/>
+        <p class="text-center text-gray-light pb-5">
+          🚚 Eat real food, real fast.
+        </p>
       </div>
     </div>
   </body>
