--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,23 @@
  *= require_self
  */
 
+$text-blue: #0092B3;
+
 @import "primer-css/index";
+
+.logo h2 {
+  display: block;
+  // Logo is 846 × 424
+  width: 282px; height: 141px;
+  position: relative;
+
+  span {
+    background: image-url("header-image.png");
+    background-size: 282px 141px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+}
