added controllers, views and models for the rating feature

--- a/app/views/trucks/_food_truck.html.erb
+++ b/app/views/trucks/_food_truck.html.erb
@@ -16,7 +16,8 @@
   <%- if food_truck.website.present? %>
     <p class="text-small">
       <strong>Website:</strong>
-      <%= link_to food_truck.website %>
+      <%= link_to food_truck.website %><br />
+      <%= link_to "Ratings" %>
     </p>
   <%- end %>
 </div>
