revised new ratings controller, model, views and routes files

--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -1,9 +1,9 @@
 <p>
-  <strong>Rating:</strong>
+  <strong>Enter Rating:</strong>
   <%= @rating.rating %>
 </p>
 
 <p>
-  <strong>Comment:</strong>
+  <strong>Provide Review:</strong>
   <%= @rating.comment %>
 </p>
